[gd_scene load_steps=3 format=3 uid="uid://camr3eate6bxe"]

[ext_resource type="Script" path="res://Scripts/UI/pause_menu.gd" id="1_kqvhf"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_m6jdg"]
size = Vector2(1920, 1080)

[node name="PauseMenu" type="Node2D"]
z_index = 50
script = ExtResource("1_kqvhf")

[node name="CanvasGroup" type="CanvasGroup" parent="."]

[node name="BackgroundTextureRect" type="TextureRect" parent="CanvasGroup"]
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("PlaceholderTexture2D_m6jdg")

[node name="MarginContainer" type="MarginContainer" parent="CanvasGroup"]
offset_left = 847.0
offset_top = 426.0
offset_right = 1106.0
offset_bottom = 789.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasGroup/MarginContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="CanvasGroup/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume Game"

[node name="SettingsButton" type="Button" parent="CanvasGroup/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="QuitGameButton" type="Button" parent="CanvasGroup/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="CanvasGroup/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasGroup/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasGroup/MarginContainer/VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
